# herdr

./: .gitignore  AGENTS.md  CHANGELOG.md  CONFIGURATION.md  CONTRIBUTING.md  Cargo.toml  INTEGRATIONS.md  KITTY_GRAPHICS_PRD.md  README.md  SKILL.md  SOCKET_API.md  SPONSORS.md  build.rs  flake.nix  justfile
.config/: nextest.toml
.githooks/: pre-commit
.github/: APPROVED_CONTRIBUTORS
.github/ISSUE_TEMPLATE/: bug.yml  change.yml  proposal.yml
.github/workflows/: approve-contributor.yml  approve-merged-contributor.yml  ci.yml  (+8 more)
.zed/: settings.json
nix/: package.nix
scripts/: agent_detection_manifest_check.py  changelog.py  nix_cargo_hash.py  seed_navigator_demo.sh  test_changelog.py  test_nix_cargo_hash.py  test_preview.py  test_vendor_libghostty_vt.py  test_vendor_portable_pty.py  vendor_libghostty_vt.py  windows_smoke_conpty_path.ps1
src/: agent_detection_policy.rs  agent_resume.rs  cli.rs  config.rs  detect.rs  events.rs  handoff_runtime.rs  image_path.rs  ipc.rs  kitty_graphics.rs  layout.rs  logging.rs  main.rs  pane.rs  persist.rs  product_announcements.rs  pty_callbacks.rs  raw_input.rs  release_notes.rs  remote.rs  selection.rs  session.rs  sound.rs  terminal_modes.rs  terminal_theme.rs  ui.rs  update.rs  workspace.rs  worktree.rs
tests/: api_ping.rs  auto_detect.rs  cli_wrapper.rs  client_mode.rs  cross_area.rs  detach_reattach.rs  live_handoff.rs  multi_client.rs  server_headless.rs
website/: .gitignore  _headers  _redirects  astro.config.mjs  index.html  install.ps1  install.sh  latest.json  package.json  preview.json  robots.txt  sitemap.xml
(+455 files in other folders)
